--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,20 +46,19 @@ android {
     lintOptions {
         disable 'LogNotTimber'
     }
-
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 
 }
 
 dependencies {
 
-
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
-
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.android.support:design:28.0.0'
@@ -67,33 +66,29 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     implementation 'com.google.code.gson:gson:2.8.5' //translates arraylists into savedpreference-compatible json
-    implementation 'com.jaredrummler:colorpicker:1.0.5' //color picker library
-    //implementation 'com.andrognito.flashbar:flashbar:1.0.2' //alert library
+    //implementation 'com.jaredrummler:colorpicker:1.1.0' //color picker library
     implementation 'joda-time:joda-time:2.9.9' //time library
     implementation 'com.fatboyindustrial.gson-jodatime-serialisers:gson-jodatime-serialisers:1.6.0' //fix for joda-time gson saving.
-    implementation "android.arch.work:work-runtime:1.0.0-rc02" //work-manager
-    implementation "androidx.room:room-runtime:2.1.0-alpha04" //sql database
-    kapt "androidx.room:room-compiler:2.1.0-alpha04" //sql database
+    implementation "android.arch.work:work-runtime:1.0.0" //work-manager
+    implementation "androidx.room:room-runtime:2.1.0-alpha05" //sql database
+    kapt "androidx.room:room-compiler:2.1.0-alpha05" //sql database
     implementation 'com.github.MatrixDev.Roomigrant:RoomigrantLib:0.1.7'//room migrations
     kapt 'com.github.MatrixDev.Roomigrant:RoomigrantCompiler:0.1.7'//room migrations
-    testImplementation "androidx.room:room-testing:2.1.0-alpha04" // Test helpers
+    testImplementation "androidx.room:room-testing:2.1.0-alpha05" // Test helpers
 
     implementation 'org.greenrobot:eventbus:3.1.1' //communicate across threads
     implementation 'com.jaredrummler:cyanea:1.0.1' //theming library
-    //implementation 'me.saket:inboxrecyclerview:1.0.0-rc1'//inbox-like transitions
+    implementation 'me.saket:inboxrecyclerview:1.0.0-rc1'//inbox-like transitions
     implementation 'com.github.Maxr1998:ModernAndroidPreferences:-SNAPSHOT' //preferences
     implementation 'com.github.rongi:klaster:0.3.4' //inline recyclerviews for simple implementations
     implementation 'com.afollestad:material-cab:1.3.1' //contextual action bar library
     implementation 'com.jonathanfinerty.once:once:1.2.2'//one-off operations
-    //implementation 'com.cuneytayyildiz:onboarder:1.0.3'//onboarding library
+    implementation 'com.cuneytayyildiz:onboarder:1.0.4'//onboarding library
+    implementation 'com.pixplicity.easyprefs:library:1.9.0' //preference handler
 
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'//zoomable imageview for location picker
     implementation 'com.github.pengrad:mapscaleview:1.4.1' //scale for mapview
     implementation 'com.google.android.gms:play-services-location:16.0.0' //geofence services
-
-    implementation project(path: ':inboxrecyclerview')
-    implementation project(path: ':onboarder')
-
 
     api 'com.google.guava:guava:25.1-android'
     testImplementation 'junit:junit:4.12'
